--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a href="https://github.com/TerrificTable" >GitHub</a><br>
             <a href="https://twitter.com/TerrificTable">Twitter</a><br>
             <a href="https://linktr.ee/TerrificTable55">LinkTree</a>
+            <a href="https://matrix.terrifictable.pw"  >Matrix.org</a>
         </div>
 
         <div id="examples">
