--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>My Links:</h3>
             <a href="https://github.com/TerrificTable" >GitHub</a><br>
             <a href="https://twitter.com/TerrificTable">Twitter</a><br>
-            <a href="https://linktr.ee/TerrificTable55">LinkTree</a>
+            <a href="https://linktr.ee/TerrificTable55">LinkTree</a><br>
             <a href="https://matrix.terrifictable.pw"  >Matrix.org</a>
         </div>
 
